--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -787,6 +787,7 @@ pre code {
 
 .container {
   padding-right: 15px;
+  margin-top: 20%;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
@@ -4054,6 +4055,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav {
+  font-family: "Montserrat", sans-serif;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
